--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
 UI_API_ENDPOINT=http://localhost:7000/graphql
 # UI_SERVER_API_ENDPOINT=http://localhost:7000/graphql
 
-UI_SERVER_PORT=2000
+PORT=2000
 # API_PROXY_TARGET=http://localhost:7000
 # UI_AUTH_ENDPOINT=http://localhost:7000/auth
 
