--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
-UI_API_ENDPOINT=http://localhost:7000/graphql
+# UI_API_ENDPOINT=http://localhost:7000/graphql
 # UI_SERVER_API_ENDPOINT=http://localhost:7000/graphql
 
 PORT=2000
