--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch-server-hmr": "webpack -w --config webpack.serverHMR.js",
     "dev-all": "rm dist/* && npm run watch-server-hmr & sleep 5 && npm start",
     "compile": "webpack --mode production",
-    "heroku-postbuild": "npm run compile"
+    "heroku-postbuild": "npm run compile && ln -sf ../node_modules/bootstrap/dist public/bootstrap"
   },
   "repository": {
     "type": "git",
